kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-backend-deployment
  namespace: staff
spec:
  replicas: 3
  selector:
    matchLabels:
      app: staff-backend
  template:
    metadata:
      labels:
        app: staff-backend
    spec:
      containers:
        - name: staff-project
          image: kadriudrin/employees-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
