kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staff-backend-service
  namespace: staff
spec:
  selector:
    app: staff-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
