kubernetes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: staff-strip-prefix
  namespace: staff  
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staff-ingress
  namespace: staff  
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: staff-staff-strip-prefix@kubernetescrd
spec:
  rules:
    - host: kiii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staff-frontend-service 
                port:
                  number: 80  
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: staff-backend-service  
                port:
                  number: 5000
